--- a/public/login/login.html
+++ b/public/login/login.html
@@ -17,6 +17,8 @@
         <p id="message"></p>
     </div>
 
+<p>HOlAAA putines... esto es una prueba </p>
+
     <script src="app.js"></script>
 </body>
 </html>
