--- a/public/login/login.html
+++ b/public/login/login.html
@@ -15,7 +15,7 @@
             <button type="submit">Iniciar Sesión</button>
         </form>
         <p id="message"></p>
-        <p>hola Perras</p>
+        <p>ola k ace je je</p>
     </div>
 
     <script src="app.js"></script>
